fix(FEC-12539): Shaka text displayer font size too small on TVs - Regression 2

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -9,7 +9,6 @@
   min-width: 48px;
   transition: bottom cubic-bezier(0.4, 0, 0.6, 1) 0.1s;
   transition-delay: 0s;
-  font-size: 20px;
   line-height: 1.4;
   color: #fff;
   font-family: Roboto-Regular, Roboto, sans-serif, TengwarTelcontar;
@@ -18,20 +17,4 @@
   display: inline;
   background: 0 0;
   text-align: center;
-}
-
-:fullscreen .shaka-text-container {
-  font-size: 4.4vmin;
-}
-
-:-webkit-full-screen .shaka-text-container {
-  font-size: 4.4vmin;
-}
-
-:-moz-full-screen .shaka-text-container {
-  font-size: 4.4vmin;
-}
-
-:-ms-fullscreen .shaka-text-container {
-  font-size: 4.4vmin;
 }
